Bug 67292 - VPP: Invalid number of elements output from vaQueryVideoProcFilters()
Summary: VPP: Invalid number of elements output from vaQueryVideoProcFilters()
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-25 08:11 UTC by Gwenole Beauchesne
Modified: 2013-09-09 07:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Test program for vaQueryVideoProcFilters() (3.76 KB, text/plain)
2013-07-25 08:11 UTC, Gwenole Beauchesne
Details
vpp: fix output filter count from QueryVideoProcFilters() (1.16 KB, patch)
2013-07-25 08:56 UTC, Gwenole Beauchesne
Details | Splinter Review

Description Gwenole Beauchesne 2013-07-25 08:11:04 UTC
Created attachment 82983 [details]
Test program for vaQueryVideoProcFilters()

When vaQueryVideoProcFilters() returns VA_STATUS_ERROR_MAX_NUM_EXCEEDED, it does not adjust the num_filters argument to the expected number of elements the caller needs to re-allocate.
Comment 1 Gwenole Beauchesne 2013-07-25 08:56:44 UTC
Created attachment 82985 [details] [review]
vpp: fix output filter count from QueryVideoProcFilters()


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.