vpp: fix output filter count from QueryVideoProcFilters().

When vaQueryVideoProcFilters() returns VA_STATUS_ERROR_MAX_NUM_EXCEEDED,
i.e. when the caller allocated too few entries for the filters argument,
then the num_filters argument shall be adjusted to correct number of
entries that need to be re-allocated.

https://bugs.freedesktop.org/show_bug.cgi?id=67292

Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>